hphp/test/zend/good/ext/mysqli/tests/mysqli_driver_unclonable.php.skipif
<?php require_once('skipif.inc'); ?>
<?php require_once('skipifemb.inc'); ?>