hphp/test/zend/bad/ext/standard/tests/filters/filter_errors_zlib_inflate.php.skipif
<?php require 'filter_errors.inc'; filter_errors_skipif('zlib.inflate'); ?>